alignment fix, step towars responsiveness (second block)

--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,7 @@
     #17191b
   );
 }
+/*line breaker on drugs*/
+br {
+  margin-bottom: 1.2em;
+}
